--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "debug": "cross-env NODE_OPTIONS='--inspect' next dev"
   },
   "dependencies": {
     "@emotion/react": "^11.1.5",
@@ -13,18 +14,27 @@
     "@emotion/styled": "^11.1.5",
     "@fontsource/inter": "^4.2.2",
     "@material-ui/core": "^5.0.0-alpha.29",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.20.0",
     "mongoose": "^5.12.3",
     "next": "10.1.3",
     "next-library": "file:.yalc/next-library",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-library": "github:italodeandra/react-library#develop"
+    "react-lazyload": "^3.2.0",
+    "react-library": "file:.yalc/react-library",
+    "react-query": "^3.13.4",
+    "react-use": "^17.2.3",
+    "uuid": "^8.3.2",
+    "valtio": "^1.0.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^10.1.3",
     "@types/react": "^17.0.3",
+    "@types/react-lazyload": "^3.1.0",
     "@typescript-eslint/parser": "^4.21.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.23.0",
     "lint-staged": "^10.5.4",
     "mongodb-memory-server": "^6.9.6",
